# jinge-rust-compiler

./: .eslintignore  .eslintrc.cjs  .gitignore  Cargo.toml  README.md  eslint.config.js  hmr-inject.js  hmr-runtime.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
.cargo/: config.toml
.github/workflows/: ci.yml
platform/linux-aarch64/: package.json
platform/linux-x86_64/: package.json
platform/macos-aarch64/: package.json
platform/macos-x86_64/: package.json
platform/windows-x86_64/: package.json
scripts/: version.ts
src/: ast.rs  common.rs  config.rs  hmr.rs  intl.rs  lib.rs  server_action.rs  tpl.rs  visitor.rs
src/parser/: attrs.rs  component.rs  cond.rs  expr.rs  intl.rs  jsx.rs  map.rs  map_key.rs  mod.rs  slot.rs  tpl.rs
ts/: binding.ts  index.ts  vite-plugin.ts
ts/cli/: intl-compile.ts  intl-extract.ts
ts/intl/: compile.ts  extract.ts  helper.ts
