[package]
name = "jinge-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1"
serde = "1"
sha2 = "0.10"
base64ct = "1.6"
swc_core = { version = "0.100", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.149"
swc_common = "0.37.2"
swc_ecma_codegen = "0.155.0"
swc_ecma_transforms_base = "0.144.0"
swc_ecma_transforms_typescript = "0.195.1"
swc_ecma_visit = "0.104.2"
lazy_static = "1.5.0"
neon = { version = "1", features = ["napi-6" ] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
