[package]
name = "jinge-compiler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10"
base64ct = "1.6"
swc_core = { version = "0.104", features = ["ecma_plugin_transform"] }
swc_ecma_parser = "0.150"
swc_common = "0.38"
swc_ecma_codegen = "0.156"
swc_ecma_transforms_base = "0.147"
swc_ecma_transforms_typescript = "0.200"
swc_ecma_visit = "0.105"
lazy_static = "1.5"
hashbrown = "0.14"
neon = { version = "1", features = ["napi-6" ] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
